update: patch poll
